# imaginaryplayer

./: .gitignore  CMakeLists.txt  README.md
data/: playlist1.txt
data/playlist1/: track1.txt  track2.txt  track4.txt
data/tracks/: track1.txt  track2.txt  track3.txt  track5.txt
include/: player.hpp  playlist.hpp  track.hpp
include/core/: constants.hpp  enums.hpp  helper.hpp  logger.hpp  playlist.hpp  track.hpp
include/ui/: iplayer.hpp  text_based_player.hpp
src/: helper.cpp  main.cpp  playlist.cpp  track.cpp
src/core/: helper.cpp  playlist.cpp  track.cpp
src/ui/: text_based_player.cpp
